# boomi-auditor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
boomi_auditor/: __init__.py  cli.py  client.py  config.py  formatters.py  redaction.py
boomi_auditor/analyzers/: __init__.py  dependency_analyzer.py  drift_analyzer.py  duplicate_analyzer.py
boomi_auditor/commands/: __init__.py  all.py  connections.py  connectors.py  drift.py  duplicates.py  processes.py
scripts/: qa_smoke.py
tests/: conftest.py
tests/fixtures/: atoms_response.json  component_references.json  connections_response.json  connectors_response.json  duplicates_scenario.json  environments_response.json  extensions_dev.json  extensions_prod.json  packaged_components.json  processes_response.json
tests/integration/: test_cli_integration.py
tests/unit/: test_client.py  test_config.py  test_dependency_analyzer.py  test_drift_analyzer.py  test_duplicate_analyzer.py  test_formatters.py  test_redaction.py
tests/unit/test_commands/: test_build_client.py  test_connections.py  test_connectors.py  test_drift.py  test_duplicates.py  test_processes.py
