[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boomi-auditor"
version = "0.1.0"
description = "Audit Boomi connector components, connection accounts, and environment extensions across DEV/SIT/QAT/PROD"
readme = "README.md"
license = "MIT"
authors = [{ name = "Daniel" }]
# The code targets 3.10+ (PEP 604 unions, no 3.11+-only features); the dev
# container is 3.13, and CI exercises the full 3.10–3.13 range.
requires-python = ">=3.10"
keywords = ["boomi", "atomsphere", "audit", "integration", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/jfdaniel77/boomi-auditor"
Changelog = "https://github.com/jfdaniel77/boomi-auditor/blob/main/CHANGELOG.md"

[project.scripts]
boomi-audit = "boomi_auditor.cli:app"

[tool.setuptools.packages.find]
include = ["boomi_auditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=boomi_auditor --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: calling typer.Option in argument defaults is the idiomatic Typer pattern
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Runnable QA/bootstrap scripts insert the repo root on sys.path before
# importing the package, so imports legitimately follow executable code.
"scripts/*" = ["E402", "I001"]
